--- a/app/assets/stylesheets/users/games.scss
+++ b/app/assets/stylesheets/users/games.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the users/titles controller here.
+// Place all the styles related to the users/games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
