--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,114 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Every</title>
+    <title>EVERY</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
-  </body>
+ </head>
+ <body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+        <div class="collapse navbar-collapse" id=navbarNavDropdown>
+            <ul class="navbar-nav ml-auto">
+                <% if user_signed_in? %>
+                <li>
+                    <%= link_to titles_path, class:'nav-link text-light' do %>
+                        <i class="fas fa-home"></i>
+                        タイトル一覧
+                    <% end %>
+                </li>
+                <li>
+                    <%= link_to comments_path, class:'nav-link text-light' do %>
+                        <i class="fa-solid fa-users"></i>
+                        コメント一覧
+                    <% end %>
+                </li>
+                <li>
+                    <%= link_to customer_path, class:'nav-link text-light' do %>
+                        <i class="fa-solid fa-book-open"></i>
+                        ユーザー
+                    <% end %>
+                </li>
+                <li>
+                    <%= link_to destroy_user_session_path,method: :delete,  class:'nav-link text-light' do %>
+                        <i class="fa-solid fa-sign-out-alt"></i>
+                        ログアウト
+                    <% end %>
+                </li>
+                <% elsif admin_signed_in? %>
+                <li>
+                    <%= link_to admina_comments_path,  class:'nav-link text-light' do %>
+                        <i class="fa-solid fa-sign-out-alt"></i>
+                        コメント一覧
+                    <% end %>
+                </li>
+                <li>
+                    <%= link_to admins_customers_path,  class:'nav-link text-light' do %>
+                        <i class="fa-solid fa-sign-out-alt"></i>
+                        ユーザー一覧
+                    <% end %>
+                </li>
+                <li>
+                    <%= link_to admins_titles_path,  class:'nav-link text-light' do %>
+                        <i class="fa-solid fa-sign-out-alt"></i>
+                        タイトル一覧
+                    <% end %>
+                </li>
+                 <li>
+                    <%= link_to destroy_admin_session_path,method: :delete,  class:'nav-link text-light' do %>
+                        <i class="fa-solid fa-sign-out-alt"></i>
+                        ログアウト
+                    <% end %>
+                </li>
+                <% else %>
+                   <li>
+                       <%= link_to titles_path, class:'nav-link text-light' do %>
+                       <i class="fa-solid fa-home"></i>
+                       タイトル一覧
+                       <% end %>
+                   </li>
+                   <li>
+                       <%= link_to comments_path, class:'nav-link text-light' do %>
+                       <i class="fa-solid fa-link"></i>
+                       コメント一覧
+                       <% end %>
+                   </li>
+                   <li>
+                       <%= link_to  new_user_registration_path, class:'nav-link text-light' do %>
+                       <i class="fa-solid fa-user-plus"></i>
+                       新規登録
+                       <% end %>
+                   </li>
+                   <li>
+                       <%= link_to new_user_session_path, class:'nav-link text-light' do %>
+                       <i class="fa-solid fa-sign-in-alt"></i>
+                       ログイン
+                       <% end %>
+                   </li>
+                <% end %>
+            </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+<main>
+  <%= yield %>
+</main>
+<footer>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="mx-auto">
+                <p>CopyRight Infratop.inc</p>
+            </div>
+        </div>
+    </div>
+ </body>
 </html>
