--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,9 @@
             <ul class="navbar-nav ml-auto">
                 <% if user_signed_in? %>
                 <li>
-                    <%= link_to titles_path, class:'nav-link text-light' do %>
+                    <%= link_to top_path, class:'nav-link text-light' do %>
                         <i class="fas fa-home"></i>
-                        タイトル一覧
+                        ホーム
                     <% end %>
                 </li>
                 <li>
@@ -30,12 +30,10 @@
                         コメント一覧
                     <% end %>
                 </li>
-                <li>
-                    <%= link_to customer_path, class:'nav-link text-light' do %>
-                        <i class="fa-solid fa-book-open"></i>
-                        ユーザー
+                    <%= link_to customer_path(current_user.id), class: 'nav-link text-light' do %>
+                     <i class="fa-solid fa-book-open"></i>
+                     ユーザー
                     <% end %>
-                </li>
                 <li>
                     <%= link_to destroy_user_session_path,method: :delete,  class:'nav-link text-light' do %>
                         <i class="fa-solid fa-sign-out-alt"></i>
@@ -44,7 +42,7 @@
                 </li>
                 <% elsif admin_signed_in? %>
                 <li>
-                    <%= link_to admina_comments_path,  class:'nav-link text-light' do %>
+                    <%= link_to admins_comments_path,  class:'nav-link text-light' do %>
                         <i class="fa-solid fa-sign-out-alt"></i>
                         コメント一覧
                     <% end %>
@@ -56,22 +54,23 @@
                     <% end %>
                 </li>
                 <li>
-                    <%= link_to admins_titles_path,  class:'nav-link text-light' do %>
+                    <%= link_to admins_top_path,  class:'nav-link text-light' do %>
                         <i class="fa-solid fa-sign-out-alt"></i>
-                        タイトル一覧
+                        ホーム
                     <% end %>
                 </li>
                  <li>
-                    <%= link_to destroy_admin_session_path,method: :delete,  class:'nav-link text-light' do %>
+                    <%= link_to destroy_admin_session_path, method: :delete,  class:'nav-link text-light' do %>
                         <i class="fa-solid fa-sign-out-alt"></i>
                         ログアウト
                     <% end %>
+
                 </li>
                 <% else %>
                    <li>
-                       <%= link_to titles_path, class:'nav-link text-light' do %>
+                       <%= link_to admins_top_path, class:'nav-link text-light' do %>
                        <i class="fa-solid fa-home"></i>
-                       タイトル一覧
+                       ホーム
                        <% end %>
                    </li>
                    <li>
@@ -85,7 +84,6 @@
                        <i class="fa-solid fa-user-plus"></i>
                        新規登録
                        <% end %>
-                   </li>
                    <li>
                        <%= link_to new_user_session_path, class:'nav-link text-light' do %>
                        <i class="fa-solid fa-sign-in-alt"></i>
