--- a/app/views/admins/games/edit.html.erb
+++ b/app/views/admins/games/edit.html.erb
@@ -2,10 +2,10 @@
    <%= form_with model: @game, url:admins_game_path, method: :patch do |f| %>
      <table>
          <tr><th>ゲームイラスト画像</th><td></td></tr>
-         <tr><th><ゲームタイトル><td><%= f.text_field :name %></td></th></tr>
+         <tr><th>ゲームタイトル<td><%= f.text_field :title %></td></th></tr>
          <tr><th>概要</th><td><%= f.text_field :body %></td></tr>
-         <tr>タグ<th><td><%= f.text_field :tag %></td></th></tr>
-         <br><%= f.submit "保存" %>
+         <tr><th>タグ<td><%= f.text_field :tag %></td></th></tr>
+         <tr><th><%= f.submit "保存" %></th></tr>
       </table>
          
    <% end %>
