--- a/app/views/admins/users/show.html.erb
+++ b/app/views/admins/users/show.html.erb
@@ -3,6 +3,5 @@
 <%= @user.date_of_birth %><br/>
 
 <%= link_to "編集", edit_admins_customer_path(@user.id) %>
-<%= link_to "削除", admins_customer_path(@user.id), method: :delete, "data-confirm" => "本当に削除しますか？
-" %>
+<%= link_to "削除", admins_customer_path(@user.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
 
