--- a/app/views/users/homes/top.html.erb
+++ b/app/views/users/homes/top.html.erb
@@ -1,1 +1,6 @@
 トップページ（ユーザー）
+<% @game.each do |game| %>
+    <table>
+        <tr><td><%= link_to game.title, game_path(game.id) %></td></tr>
+    </table>
+<% end %>
