--- a/app/views/users/comments/index.html.erb
+++ b/app/views/users/comments/index.html.erb
@@ -1,14 +1,12 @@
 コメント一覧（ユーザー）
 <table>
   <tbody>
-  <% @comment.each do |comment| %>
-  <% if @comment.user_id == current_user.id %>
-    <tr>
-      <td><%= link_to comment.comment, comment_path(comment.id) %></td>
-    </tr>
-  <% end %>
+    <% @comments.each do |comment| %>
+      <% if comment.user_id == current_user.id %>
+        <tr>
+          <td><%= link_to comment.comment, comment_path(comment.id) %></td>
+        </tr>
+      <% end %>
+    <% end %>
   </tbody>
-      
-  <% end %>
 </table>
-    
