--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,12 +43,12 @@
                     <% end %>
                 </li>
                 <% elsif admin_signed_in? %>
-                <li>
-                    <%= link_to admins_comments_path,  class:'nav-link text-light' do %>
-                        <i class="fa-solid fa-sign-out-alt"></i>
-                        コメント一覧
-                    <% end %>
-                </li>
+                <!--<li>-->
+                <!--    <%#= link_to admins_comments_path,  class:'nav-link text-light' do %>-->
+                <!--        <i class="fa-solid fa-sign-out-alt"></i>-->
+                <!--        コメント一覧-->
+                <!--    <#% end %>-->
+                <!--</li>-->
                 <li>
                     <%= link_to admins_users_path,  class:'nav-link text-light' do %>
                         <i class="fa-solid fa-sign-out-alt"></i>
@@ -75,12 +75,12 @@
                        ホーム
                        <% end %>
                    </li>
-                   <li>
-                       <%= link_to comments_path, class:'nav-link text-light' do %>
-                       <i class="fa-solid fa-link"></i>
-                       コメント一覧
-                       <% end %>
-                   </li>
+                   <!--<li>-->
+                   <!--    <%#= link_to comments_path, class:'nav-link text-light' do %>-->
+                   <!--    <i class="fa-solid fa-link"></i>-->
+                   <!--    コメント一覧-->
+                   <!--    <#% end %>-->
+                   <!--</li>-->
                    <li>
                        <%= link_to  new_user_registration_path, class:'nav-link text-light' do %>
                        <i class="fa-solid fa-user-plus"></i>
