--- a/app/views/users/comments/show.html.erb
+++ b/app/views/users/comments/show.html.erb
@@ -1,1 +1,10 @@
 コメント詳細
+
+<table>
+  <tbody>
+    <tr>
+        <th><%= @comment.comment %></th>
+        <th><%= link_to "削除", strategy_comment_path(@comment.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></th>
+    </tr>
+  </tbody>
+</table>
