--- a/app/views/users/strategies/edit.html.erb
+++ b/app/views/users/strategies/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="strategy-edit-container">
-  <h3 class="title">攻略情報編集画面（ユーザー）</h3>
+  <h3 class="title">攻略情編集画面（ユーザー）</h3>
   
   <%= form_with model: @strategy, url: strategy_path, method: :patch, class: "strategy-form" do |f| %>
     <div class="strategy-form-group">
@@ -14,5 +14,5 @@
       <%= f.submit "保存", class: "btn btn-primary" %>
     </div>
   <% end %>
-
 </div>
+
