--- a/app/views/admins/games/edit.html.erb
+++ b/app/views/admins/games/edit.html.erb
@@ -1,7 +1,7 @@
 <h3>ゲーム編集画面</h3>
    <%= form_with model: @game, url:admins_game_path, method: :patch do |f| %>
      <table>
-         <tr><th>ゲームイラスト画像</th><td></td></tr>
+         <tr><th>ゲームイラスト画像</th><td><%= f.file_field :image, accept: "image/*" %></td></tr>
          <tr><th>ゲームタイトル<td><%= f.text_field :title %></td></th></tr>
          <tr><th>概要</th><td><%= f.text_field :body %></td></tr>
          <tr><th>タグ<td><%= f.text_field :tag %></td></th></tr>
