--- a/app/views/users/users/edit.html.erb
+++ b/app/views/users/users/edit.html.erb
@@ -1,8 +1,22 @@
-<h4>ユーザー編集画面(ユーザー)</h4>
-<%= form_with model: @user, url:user_path(@user.id), method: :patch do |f| %>
-    <table>
-        <tr><th>名前</th><td><%= f.text_field :name %></td></tr>
-        <tr><th><%= f.file_field :image, accept: "image/*" %></th></>
-        <tr><th><%= f.submit "保存する" %></th></tr>
+<h2 class="edit-title">ユーザー編集</h2>
+
+<div class="edit-form-container">
+  <%= form_with model: @user, url: user_path(@user.id), method: :patch do |f| %>
+    <table class="edit-table">
+      <tr>
+        <th>名前</th>
+        <td><%= f.text_field :name, class: "form-control" %></td>
+      </tr>
+      <tr>
+        <th>プロフィール画像</th>
+        <td><%= f.file_field :image, accept: "image/*", class: "form-control-file" %></td>
+      </tr>
+      <tr>
+        <td colspan="2" class="form-actions">
+          <%= f.submit "保存する", class: "btn btn-save" %>
+          <%= link_to "キャンセル", user_path(@user), class: "btn btn-cancel" %>
+        </td>
+      </tr>
     </table>
-<% end %>
+  <% end %>
+</div>
