--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -1,12 +1,18 @@
-<h4>ユーザー詳細（ユーザー）</h4>
-<%= @user.name %><br/>
-  <% if @user.image.attached? %>
-    <%= image_tag @user.image, size: "200x200" %>
-  <% else %>
-    <%= image_tag 'no_image', size: "200x200" %>
-  <% end %>
+<h2 class="user-title">ユーザー詳細</h2>
 
-<table>
-    <th><td><%= link_to "編集", edit_user_path(@user.id) %></td></th>
-    <th><td><%= link_to "削除", user_path(@user.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></td></th>
+<div class="user-info">
+  <h3><%= @user.name %></h3>
+  
+  <div class="user-image">
+    <% if @user.image.attached? %>
+      <%= image_tag @user.image, size: "200x200" %>
+    <% else %>
+      <%= image_tag 'no_image', size: "200x200" %>
+    <% end %>
+  </div>
 
+  <div class="user-actions">
+    <%= link_to "編集", edit_user_path(@user.id), class: "btn btn-edit" %>
+    <%= link_to "削除", user_path(@user.id), method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-delete" %>
+  </div>
+</div>
