--- a/app/views/users/games/edit.html.erb
+++ b/app/views/users/games/edit.html.erb
@@ -1,11 +1,30 @@
-<h3>ゲーム編集画面</h3>
-   <%= form_with model: @game, url:game_path(@game), method: :patch do |f| %>
-     <table>
-         <tr><th>ゲームイラスト画像</th><td><%= f.file_field :image, accept: "image/*" %></td></tr>
-         <tr><th>ゲームタイトル<td><%= f.text_field :title %></td></th></tr>
-         <tr><th>概要</th><td><%= f.text_field :body %></td></tr>
-         <tr><th>タグ<td><%= f.text_field :tag %></td></th></tr>
-         <tr><th><%= f.submit "保存" %></th></tr>
-      </table>
-         
-   <% end %>
+<h2 class="edit-title">ゲーム編集画面</h2>
+
+<div class="edit-form-container">
+  <%= form_with model: @game, url: game_path(@game), method: :patch do |f| %>
+    <table class="edit-table">
+      <tr>
+        <th>ゲームイラスト画像</th>
+        <td><%= f.file_field :image, accept: "image/*", class: "form-control-file" %></td>
+      </tr>
+      <tr>
+        <th>ゲームタイトル</th>
+        <td><%= f.text_field :title, class: "form-control" %></td>
+      </tr>
+      <tr>
+        <th>概要</th>
+        <td><%= f.text_area :body, class: "form-control", rows: 4 %></td>
+      </tr>
+      <tr>
+        <th>タグ</th>
+        <td><%= f.text_field :tag, class: "form-control" %></td>
+      </tr>
+      <tr>
+        <td colspan="2" class="form-actions">
+          <%= f.submit "保存", class: "btn btn-save" %>
+          <%= link_to "キャンセル", game_path(@game), class: "btn btn-cancel" %>
+        </td>
+      </tr>
+    </table>
+  <% end %>
+</div>
