--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,10 @@
+
+
 @import "users/homes";
 @import "users/strategies";
 @import "users/users";
 @import "users/games";
+
+
+@import "admins/games";
+@import "admins/strategies";
