--- a/app/views/admins/games/new.html.erb
+++ b/app/views/admins/games/new.html.erb
@@ -1,13 +1,29 @@
-<%= form_with model: @game, url: admins_games_path do |f|%>
-  <h4>ゲーム名</h4>
-  <%= f.text_field :title %>
-  
-  <h4>概要</h4>
-  <%= f.text_field :body %>
-  
-  <h4>カテゴリー</h4>
-  <%= f.text_field :tag %>
-  
-  <br>
-  <%= f.submit '投稿' %>
-<% end %>
+<h2 class="form-title">ゲーム投稿</h2>
+
+<div class="form-container">
+  <%= form_with model: @game, url: admins_games_path, multipart: true do |f| %>
+    <div class="form-group">
+      <label>ゲーム名</label>
+      <%= f.text_field :title, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <label>概要</label>
+      <%= f.text_area :body, class: "form-control", rows: 4 %>
+    </div>
+
+    <div class="form-group">
+      <label>カテゴリー</label>
+      <%= f.text_field :tag, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <label>ゲーム画像</label>
+      <%= f.file_field :image, class: "form-control-file", accept: "image/*" %>
+    </div>
+
+    <div class="form-actions">
+      <%= f.submit "投稿", class: "btn btn-submit" %>
+    </div>
+  <% end %>
+</div>
