--- a/app/views/admins/strategies/new.html.erb
+++ b/app/views/admins/strategies/new.html.erb
@@ -1,13 +1,20 @@
-<%#= form_with model: @strategy, url: admins_strategies_path do |f| %>
-<%= form_with model: [:admins, @strategy] do |f| %>
-  <%= render 'layouts/error_messages', model: f.object %>
+<div class="strategy-edit-container">
+  <h3 class="title">攻略情報編集画面（管理者）</h3>
   
-  <%= f.hidden_field :game_id, value: params[:game_id] %>
-  <h4>タイトル</h4>
-  <%= f.text_field :title %>
-  
-  <h4>本文</h4>
-  <%= f.text_field :body %>
-  <br>
-  <%= f.submit '投稿' %>
-<% end %>
+  <%= form_with model: @strategy, url: admins_strategies_path, method: :post, class: "strategy-form" do |f| %>
+  <%= f.hidden_field :game_id, value: @game.id %>
+    <div class="strategy-form-group">
+      <label for="title">タイトル名</label>
+      <%= f.text_field :title, class: "form-control", placeholder: "タイトルを入力してください" %>
+    </div>
+    <div class="strategy-form-group">
+      <label for="body">本文</label>
+      <%= f.text_area :body, class: "form-control", rows: 5, placeholder: "本文を入力してください" %>
+    </div>
+    <div class="form-actions">
+  <div class="button-wrapper">
+    <%= f.submit "保存", class: "btn btn-primary" %>
+  </div>
+</div>
+  <% end %>
+</div>
