--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>EVERY</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>EVERY</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
- </head>
- <body>
+<body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
@@ -28,94 +27,99 @@
             <% end %>
           </div>
         <% end %>
-        <div class="collapse navbar-collapse" id=navbarNavDropdown>
-            <ul class="navbar-nav ml-auto">
-                <% if user_signed_in? %>
-                <li>
-                    <%= link_to top_path, class:'nav-link text-light' do %>
-                        <i class="fas fa-home"></i>
-                        ホーム
-                    <% end %>
-                </li>
-                <li>
-                    <%= link_to user_path(current_user.id), class: 'nav-link text-light' do %>
-                     <i class="fa-solid fa-book-open"></i>
-                     ユーザー
-                    <% end %>
-                </li>
-                <li>
-                    <%= link_to destroy_user_session_path,method: :delete,  class:'nav-link text-light' do %>
-                        <i class="fa-solid fa-sign-out-alt"></i>
-                        ログアウト
-                    <% end %>
-                </li>
-                <% elsif admin_signed_in? %>
-                <li>
-                    <%= link_to admins_users_path,  class:'nav-link text-light' do %>
-                        <i class="fa-solid fa-sign-out-alt"></i>
-                        ユーザー一覧
-                    <% end %>
-                </li>
-                <li>
-                    <%= link_to admins_top_path,  class:'nav-link text-light' do %>
-                        <i class="fa-solid fa-sign-out-alt"></i>
-                        ホーム
-                    <% end %>
-                </li>
-                 <li>
-                    <%= link_to destroy_admin_session_path, method: :delete,  class:'nav-link text-light' do %>
-                        <i class="fa-solid fa-sign-out-alt"></i>
-                        ログアウト
-                    <% end %>
 
-                </li>
-                <% else %>
-                   <li>
-                       <%= link_to admins_top_path, class:'nav-link text-light' do %>
-                       <i class="fa-solid fa-home"></i>
-                       ホーム
-                       <% end %>
-                   </li>
-                   <li>
-                       <%= link_to  new_user_registration_path, class:'nav-link text-light' do %>
-                       <i class="fa-solid fa-user-plus"></i>
-                       新規登録
-                       <% end %>
-                   <li>
-                       <%= link_to new_user_session_path, class:'nav-link text-light' do %>
-                       <i class="fa-solid fa-sign-in-alt"></i>
-                       ログイン
-                       <% end %>
-                   </li>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
+            <% if user_signed_in? %>
+              <li>
+                <%= link_to top_path, class:'nav-link text-light' do %>
+                  <i class="fas fa-home"></i>
+                  ホーム
                 <% end %>
-            </ul>
+              </li>
+              <li>
+                <%= link_to user_path(current_user.id), class: 'nav-link text-light' do %>
+                  <i class="fa-solid fa-book-open"></i>
+                  ユーザー
+                <% end %>
+              </li>
+              <li>
+                <%= link_to destroy_user_session_path, method: :delete, class:'nav-link text-light' do %>
+                  <i class="fa-solid fa-sign-out-alt"></i>
+                  ログアウト
+                <% end %>
+              </li>
+
+            <% elsif admin_signed_in? %> <!-- 修正: `elsif` を `else` の外に移動 -->
+              <li>
+                <%= link_to admins_users_path, class:'nav-link text-light' do %>
+                  <i class="fa-solid fa-users"></i>
+                  ユーザー一覧
+                <% end %>
+              </li>
+              <li>
+                <%= link_to admins_top_path, class:'nav-link text-light' do %>
+                  <i class="fa-solid fa-home"></i>
+                  ホーム
+                <% end %>
+              </li>
+              <li>
+                <%= link_to destroy_admin_session_path, method: :delete, class:'nav-link text-light' do %>
+                  <i class="fa-solid fa-sign-out-alt"></i>
+                  ログアウト
+                <% end %>
+              </li>
+
+            <% else %> <!-- 修正: `else` は `elsif` の後に来ないように修正 -->
+              <li>
+                <%= link_to top_path, class:'nav-link text-light' do %>
+                  <i class="fa-solid fa-home"></i>
+                  ホーム
+                <% end %>
+              </li>
+              <li>
+                <%= link_to new_user_registration_path, class:'nav-link text-light' do %>
+                  <i class="fa-solid fa-user-plus"></i>
+                  新規登録
+                <% end %>
+              </li>
+              <li>
+                <%= link_to new_user_session_path, class:'nav-link text-light' do %>
+                  <i class="fa-solid fa-sign-in-alt"></i>
+                  ログイン
+                <% end %>
+              </li>
+            <% end %>
+          </ul>
         </div>
       </div>
     </nav>
   </header>
 
-<main>
+  <main>
     <% if flash[:alert] %>
-  <div class="alert alert-danger">
-    <%= flash[:alert] %>
-  </div>
-<% end %>
+      <div class="alert alert-danger">
+        <%= flash[:alert] %>
+      </div>
+    <% end %>
 
-<% if flash[:notice] %>
-  <div class="alert alert-success">
-    <%= flash[:notice] %>
-  </div>
-<% end %>
+    <% if flash[:notice] %>
+      <div class="alert alert-success">
+        <%= flash[:notice] %>
+      </div>
+    <% end %>
 
-  <%= yield %>
-</main>
-<footer>
+    <%= yield %>
+  </main>
+
+  <footer>
     <div class="container mt-5">
-        <div class="row">
-            <div class="mx-auto">
-                <p>CopyRight Infratop.inc</p>
-            </div>
+      <div class="row">
+        <div class="mx-auto">
+          <p>CopyRight Infratop.inc</p>
         </div>
+      </div>
     </div>
- </body>
+  </footer>
+</body>
 </html>
